# certificados-gra

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/copilot-workspace/: policy.json
app/: .prettierignore  .prettierrc  Dockerfile  next.config.ts  package.json  tsconfig.json
app-test/: eslint.config.mjs  package.json
app/public/: manifest.json  robots.txt  sitemap.xml
app/src/: middleware.ts
file-gateway/: .env.example  Cargo.toml  Makefile  README.md
file-gateway/src/: bootstrap.rs  main.rs
file-gateway/src/adapters/rest/: routes.rs
file-gateway/src/application/: mod.rs
file-gateway/src/application/dtos/: file_download.rs  file_upload.rs  job_events.rs  job_status.rs  mod.rs
file-gateway/src/application/ports/: event_bus.rs  file_repository.rs  job_repository.rs  mod.rs
file-gateway/src/application/services/: file_service.rs  job_service.rs  mod.rs
file-gateway/src/config/: settings.rs
file-gateway/src/domain/: errors.rs  job_status.rs  mod.rs
file-gateway/src/infra/: mod.rs
file-gateway/src/infra/http/: file_server_repository.rs  mod.rs
file-gateway/src/infra/logging/: mod.rs  tracing_init.rs
file-gateway/src/infra/nats/: mod.rs  nats_bus.rs  nats_consumer.rs
file-gateway/src/infra/redis/: client.rs  job_repository.rs  mod.rs
file-svc/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
file-svc/config/: default.toml  production.toml
file-svc/src/: error.rs  lib.rs  main.rs  router.rs  state.rs
file-svc/src/config/: file_server.rs  http.rs  log.rs  mod.rs  nats.rs  redis.rs  settings.rs
file-svc/src/dto/: request.rs  response.rs
file-svc/src/events/: mod.rs  publisher.rs  subjects.rs  subscriber.rs
file-svc/src/events/payloads/: download.rs  mod.rs  upload.rs
file-svc/src/handlers/: download_handler.rs  health_handler.rs  mod.rs  upload_handler.rs
file-svc/src/middleware/: error_handler.rs  mod.rs  request_logger.rs
file-svc/src/models/: file.rs  health.rs  job.rs  mod.rs
file-svc/src/repositories/: file_server_repository.rs  mod.rs  redis_cache_repository.rs  redis_queue_repository.rs
file-svc/src/repositories/traits/: cache_repository.rs  file_repository.rs  mod.rs  queue_repository.rs
file-svc/src/services/: download_service.rs  health_service.rs  mod.rs  signature_service.rs  upload_service.rs
file-svc/src/shared/: tracing.rs  types.rs
file-svc/src/workers/: download_worker.rs  mod.rs  upload_worker.rs
file-svc/tests/: download_events_tests.rs  download_tests.rs  integration_download_test.rs  integration_events_test.rs  integration_upload_test.rs  signature_tests.rs  upload_events_tests.rs  upload_tests.rs
pdf-service/: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt  worker.py
pdf-service-test/: Dockerfile  README.md  run.py
pdf-service/app/: deps.py  main.py
pdf-service/app/api/: __init__.py
pdf-service/app/api/routes/: files.py  generate_doc.py  health.py
pdf-service/app/api/schemas/: generate_doc.py
pdf-service/app/core/: config.py  redis.py
pdf-service/app/repositories/: files_repository.py
pdf-service/app/services/: file_service.py  jobs_service.py  pdf_generation_service.py  pdf_service.py  qr_service.py
pdf-service/scripts/: publish_batch_requested.py  subscribe_batch_accepted.py  subscribe_filegw_download_requested.py
pdf-service/src/pdfsvc/: container.py  dev.py  logging.py  main.py  settings.py
pdf-service/src/pdfsvc/application/dto/: events.py  requests.py
pdf-service/src/pdfsvc/application/ports/: job_repository.py  lock_repository.py  queue_repository.py
pdf-service/src/pdfsvc/application/use_cases/: accept_batch.py
pdf-service/src/pdfsvc/config/: nats_connect.py  redis_connect.py  settings.py
pdf-service/src/pdfsvc/domain/services/: pdf_qr_insert_service.py  pdf_replace_service.py  qr_service.py
pdf-service/src/pdfsvc/infrastructure/fs/: tmp_store.py
pdf-service/src/pdfsvc/infrastructure/nats/: broker.py  publishers.py  subjects.py  subscribers.py
pdf-service/src/pdfsvc/infrastructure/redis/: job_repo_redis.py  lock_repo_redis.py  queue_repo_redis.py  redis_client.py
pdf-service/src/pdfsvc/shared/: logging.py
pdf-service/src/pdfsvc/workers/: download_worker.py  run_download.py
pdf-service/tests/: test_files.py  test_generate_doc_endpoint.py  test_health.py  test_pdf_generation_service.py  test_qr_service.py
pdf-svc/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  dev.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
pdf-svc/cache/templates/: .gitignore
pdf-svc/src/pdf_svc/: __init__.py  main.py
pdf-svc/src/pdf_svc/config/: __init__.py  settings.py
pdf-svc/src/pdf_svc/dto/: __init__.py  pdf_request.py
pdf-svc/src/pdf_svc/events/: __init__.py  publishers.py  subscribers.py
pdf-svc/src/pdf_svc/models/: __init__.py  events.py  job.py
pdf-svc/src/pdf_svc/repositories/: __init__.py  file_repository.py  job_repository.py
pdf-svc/src/pdf_svc/services/: __init__.py  pdf_orchestrator.py  pdf_qr_insert_service.py  pdf_replace_service.py  qr_service.py  template_cache.py
pdf-svc/src/pdf_svc/shared/: __init__.py  logger.py
pdf-svc/src/pdf_svc/workers/: __init__.py
pdf-svc/tests/: conftest.py  test_integration_pipeline.py  test_integration_real.py  test_pdf_qr_insert_service.py  test_pdf_replace_service.py  test_qr_service.py  test_unit_job_models.py  test_unit_pdf_replace.py  test_unit_qr_insert.py  test_unit_qr_service.py
pdf-worker/: Cargo.toml  Dockerfile  Makefile
pdf-worker/src/: main.rs
pdf-worker/src/application/: worker.rs
pdf-worker/src/config/: mod.rs
pdf-worker/src/domain/: job.rs
pdf-worker/src/infrastructure/: mod.rs
pdf-worker/src/infrastructure/db/: documents_repo.rs  mod.rs  pool.rs
pdf-worker/src/infrastructure/pdf_service/: client.rs
pdf-worker/src/infrastructure/redis/: queue.rs
pdf-worker/src/shared/: logging.rs
server/: .air.toml  .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
server-test/: .dockerignore  Makefile
(+437 files in other folders)
