[package]
name = "file-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45.0"
async-trait = "0.1.89"
axum = { version = "0.7", features = ["multipart"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
redis = { version = "1.0.1", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
