[package]
name = "file-svc"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "File Gateway Microservice - REST & Events"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
    "stream",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# NATS
async-nats = "0.38"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Crypto (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
bytes = "1.9"
futures-util = "0.3"
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
