[project]
name = "pdf-service"
version = "0.1.0"
description = "Event-driven pdf generator service (FastStream + Redis + NATS)"
requires-python = ">=3.11"
dependencies = [
    "faststream[nats]>=0.5.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "watchfiles>=0.22.0",
]

[dependency-groups]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
