[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-svc"
version = "1.0.0"
description = "Event-driven PDF generation microservice"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Inteligente" }
]

dependencies = [
    # Async & messaging
    "nats-py>=2.9.0",
    "redis>=5.0.0",
    # PDF processing
    "pymupdf>=1.24.0",
    "segno>=1.6.0",
    "pillow>=10.0.0",
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP client
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.1.0",
    "colorama>=0.4.6",
    # Serialization
    "orjson>=3.9.0",
    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "faker>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "watchfiles>=0.21.0",
]

[project.scripts]
pdf-svc = "pdf_svc.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_svc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/pdf_svc"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
