[package]
name = "pdf-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
dotenvy = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

uuid = { version = "1.8", features = ["serde", "v4"] }

redis = { version = "0.27", features = ["tokio-comp"] }

# ✅ sin macros obligatorios; puedes usarlos luego si quieres
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
